# kids-backend

./: .env.example  Cargo.toml
src/: lib.rs  main.rs
src/categories/: models.rs  services.rs
src/gql/: mod.rs  mutations.rs  queries.rs
src/projects/: models.rs  services.rs
src/topics/: models.rs  services.rs
src/users/: models.rs  services.rs
src/util/: common.rs  constant.rs  cred.rs  pagination.rs
tests/: schema.rs
