[package]
name = "kids-backend"
version = "0.0.1"
authors = ["zzy <ask@niqin.com>"]
edition = "2024"

[dependencies]
futures = "0.3"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
axum = "0.8"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
lazy_static = "1.5"

async-graphql = { version = "7.0", features = ["bson", "chrono"] }
async-graphql-axum = "7.0"
mongodb = "3.2"

regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
jsonwebtoken = "9.3"
ring = "0.17"
base64 = "0.22"

deunicode = "1.6"
pulldown-cmark = { version = "0.13", features = ["simd"] }

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
